static/style.css
body {
    background-image: url("circuits.jpg");
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-family: 'Roboto';
    margin-left: 10px;
    overflow: scroll;
}

main {
    position: relative;
    top: 10vh;
    color: white;
}

a {
    color: yellow;
    text-decoration: none;
}

#menu {
    margin: 0;
    padding: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    background-color: orange;
    border-top: 5px solid black;
    border-bottom: 5px solid black;
    z-index: 1;
}

.menu-link:hover {
    color: white;
}

.menu-link {
    color: black;
}

.card {
    width: 60vw;
    background-color: rgba(0, 0, 0, 0.4);
    border-bottom-right-radius: 30px;
    padding: 10px;
}

.card > h1 {
    padding-left: 1vw;
    border-left: 2vw solid transparent;
}

.card:hover > h1 {
    border-left: 2vw solid orange;
}

.card:hover {
    background-color:  rgba(0, 0, 0, 0.8);
}

#links {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 100vw;
}

#gravatar > img {
    height: 100%;
    z-index: 1;
}

#gravatar-image {
    position: fixed;
    bottom: 2vh;
    right: 2vw;
    z-index: 1;
    border-radius: 25px;
    box-shadow: 10px 10px 10px black;
}

